# triangle

./: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  README.md  main.cpp  triangle.cpp
